Parameter is no longer a DataType.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@14325 91430c5f-d668-0410-9e7d-dd663366dcfd